<?xml version="1.0"?>
<package format="2">
  <name>sparo_2d_navigation</name>
  <version>0.0.1</version>
  <description>
    Navigation package for SPARO robots
  </description>
  <license>Apache 2.0</license>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
